修改右滑依赖库；修改视频解析逻辑。

--- a/app/src/main/res/common/layout/include_news_detail_tool_bar.xml
+++ b/app/src/main/res/common/layout/include_news_detail_tool_bar.xml
@@ -78,7 +78,8 @@
                     android:singleLine="true"
                     android:textColor="#fffafafa"
                     android:textSize="8sp"
-                    android:visibility="gone"/>
+                    android:text="1"
+                    android:visibility="visible"/>
             </FrameLayout>
         </FrameLayout>
 
