--- a/app/src/main/res/common/layout/include_top.xml
+++ b/app/src/main/res/common/layout/include_top.xml
@@ -21,10 +21,10 @@
         android:id="@+id/ll_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="horizontal"
+        android:layout_alignTop="@+id/iv_back"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_avatar"
@@ -34,9 +34,9 @@
 
         <TextView
             android:id="@+id/tv_author"
-            android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/color_222222"
             android:textSize="14sp"
             />
